--- a/task0003/4.课程表/timetable.html
+++ b/task0003/4.课程表/timetable.html
@@ -7,7 +7,7 @@
 <body background="images/2.JPG" repeat="no repeat">
   <center>
   <table border="1" cellpadding="20" width="50%" margin-top:"4px">
-    <caption><h2>信安1601-03班</hr></caption>
+    <caption><h2>信安1601-03班</h2></caption>
     <tr>
       <th></th>
       <th>星期一</th>
