--- a/task0004/简历美化/简历.html
+++ b/task0004/简历美化/简历.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>个人简历</title>
+  <link rel="icon" href="images/logo.png" />
+  <link rel="stylesheet" href="css/all.css"/>
 </head>
 <body background="images/1.jpg">
 <center>
@@ -16,61 +18,56 @@
     </thead>
     <tbody>
       <tr>
-        <th align="center" width="15%">姓名</th>
-        <td align="center" width="30%">王为红</td>
-        <th align="center" width="15%">性别</th>
-        <td align="center" width="30%">女</td>
+        <th width="15%">姓名</th>
+        <td width="30%">王为红</td>
+        <th width="15%">性别</th>
+        <td width="30%">女</td>
       </tr>
       <tr>
-        <th align="center" width="15%">民族</th>
-        <td align="center" width="30%">汉族</td>
-        <th align="center" width="15%">籍贯</th>
-        <td align="center" width="30%">上海</td>
+        <th width="15%">民族</th>
+        <td width="30%">汉族</td>
+        <th width="15%">籍贯</th>
+        <td width="30%">上海</td>
       </tr>
       <tr>
-        <th align="center" width="15%">出生日期</th>
-        <td align="center" width="30%">1998.3.31</td>
-        <th align="center" width="15%">面貌</th>
-        <td align="center" width="30%">共青团员</td>
+        <th width="15%">出生日期</th>
+        <td width="30%">1998.3.31</td>
+        <th width="15%">面貌</th>
+        <td width="30%">共青团员</td>
       </tr>
       <tr>
-        <th align="center">邮箱</th>
-        <td align="center"colspan="3">&nbspwwhmomo@gmail.com&nbsp</td>
+        <th>邮箱</th>
+        <td colspan="3">&nbspwwhmomo@gmail.com&nbsp</td>
+      </tr>
+
+      <tr class="basic">
+        <th colspan="4">教育信息</th>
       </tr>
       <tr>
+        <th >小学</th>
+        <td colspan="3">&nbsp2004-2009&nbsp杨泰实验学校</td>
+      </tr>
+      <tr>
+        <th >初中</th>
+        <td colspan="3">&nbsp2009-2013&nbsp淞谊中学</td>
+      </tr>
+      <tr>
+        <th >高中</th>
+        <td colspan="3">&nbsp2013-2016&nbsp上海大学附属中学&nbsp</td>
+      </tr>
+      <tr>
+        <th >大学本科</th>
+        <td colspan="3">&nbsp2016迄今&nbsp华中科技大学</td>
       </tr>
       <tr class="basic">
-        <th align="center"colspan="4">教育信息</th>
+        <th colspan="4">项目经验</th>
       </tr>
       <tr>
-        <th align="center">小学</th>
-        <td align="center"colspan="3">&nbsp2004-2009&nbsp杨泰实验学校</td>
-      </tr>
-      <tr>
-        <th align="center">初中</th>
-        <td align="center"colspan="3">&nbsp2009-2013&nbsp淞谊中学</td>
-      </tr>
-      <tr>
-        <th align="center">高中</th>
-        <td align="center"colspan="3">&nbsp2013-2016&nbsp上海大学附属中学&nbsp</td>
-      </tr>
-      <tr>
-        <th align="center">大学本科</th>
-        <td align="center"colspan="3">&nbsp2016迄今&nbsp华中科技大学</td>
-      </tr>
-      <tr class="basic">
-        <th align="center"colspan="4">项目经验</th>
-      </tr>
-      <tr>
-        <th align="center"><img src="images/github.png">github</th>
-        <td align="center"colspan="3"><a href="https://github.com/podiumdesu" target="_blank">@podiumdesu</a></td>
+        <th class="github" colspan="4"><a href="https://github.com/podiumdesu"><img src="images/github.png"></a></th>
       </tr>
     </tbody>
   </table>
-  <style>
 
-  .basic{background-color: #58FAF4}
-  </style>
 </center>
 </body>
 </html>
