finish about&index

--- a/task0006/index.html
+++ b/task0006/index.html
@@ -11,9 +11,17 @@
   <nav>
     <a href="web/shouye.html">首页</a>
     <a href="web/about.html">关于</a></a>
-    <a href="web/archives.html">归档</a>
     <a href="web/friendrolls.html">友链</a>
   </nav>
+  <div class="aboutme">
+    <p class="dd">一个喜欢摄影、喜欢代码、期待能做些什么的人</p>
+    <br/>
+    <br/>
+    <P class="dd">当你很想很想做一件事的时候，宇宙会推进你跟它之间的距离</P>
+    <br/>
+    <br/>
+    <p class="dd">你好，很高兴认识你</p>
+  </div>
   <div class="container">
     <input id="1" name="image" checked type="radio"/>
     <label for="1">
@@ -44,5 +52,10 @@
       <img class="large" src="http://ojvrmnpos.bkt.clouddn.com/m.jpg" alt="hanstreet">
     </div>
   </div>
+  <footer>
+    <p class="bq">©2017&nbsp;</p>
+    <p class="xin">❤&nbsp;</p>
+    <p class="name">PetnaKanojo</p>
+  </footer>
 </body>
 </html>
