--- a/task0006/web/about.html
+++ b/task0006/web/about.html
@@ -1,8 +1,61 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>PetnaKanojo's blog</title>
+  <link rel="stylesheet" href="../css/about.css">
+  <link rel="icon" href="../images/logo.png">
+</head>
+<body>
   <head>
-    <title></title>
-    <meta content="">
-    <style></style>
+    <nav>
+      <div class="logo">
+        <a href="../index.html"><img src="../images/logo.png" alt="logo" width=40px /></a>
+      </div>
+      <ul class="links">
+        <li><a href="../web/shouye.html">首页&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+        <li><a class="selected">关于&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+        <li><a href="../web/friendrolls.html">友链&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+      </ul>
+    </nav>
+    <div class="about">
+      <p class="contact">
+        ABOUT ME
+      </p>
+      <p>
+        华中科技大学计算机学院信息安全专业本科生在读
+      </p>
+      <p>
+        喜欢代码、喜欢烹饪、喜欢摄影
+      </p>
+      <p>
+        希望能和所有可爱的人都做好朋友
+      </p>
+      <p>
+        欢迎交流，欢迎指正博客里的错误　:)
+      </p>
+      <p class="contact">
+        CONTACT ME
+      </p>
+      <p>
+        Github:<a href="https://github.com/podiumdesu" target="_abc">@podiumdesu</a>
+      </p>
+      <p>
+        Telegram:<a href="https://telegram.me/PetnaKanojo" target="_abc">@PetnaKanojo</a>
+      </p>
+      <p>
+        Email:<a href="mailto:wwhmomo@gmail.com">wwhmomo@gmail.com</a>
+      </p>
+    </div>
   </head>
-  <body></body>
+
+
+  <footer>
+    <p class="item">©2017&nbsp;</p>
+    <p class="item">❤&nbsp;</p>
+    <p class="item">PetnaKanojo</p>
+  </footer>
+</body>
 </html>
