--- a/task0006/web/friendrolls.html
+++ b/task0006/web/friendrolls.html
@@ -1,8 +1,31 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>PetnaKanojo's blog</title>
+  <link rel="stylesheet" href="../css/friendrolls.css">
+  <link rel="icon" href="images/logo.png">
+</head>
+<body>
   <head>
-    <title></title>
-    <meta content="">
-    <style></style>
+    <nav>
+      <div class="logo">
+        <a href="../index.html"><img src="../images/logo.png" alt="logo" width=40px /></a>
+      </div>
+      <ul class="links">
+        <li><a href="../web/shouye.html">首页&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+        <li><a href="../web/about.html">关于&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+        <li><a class="selected">友链&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+      </ul>
+    </nav>
   </head>
-  <body></body>
+
+  <footer>
+    <p class="item">©2017&nbsp;</p>
+    <p class="item">❤&nbsp;</p>
+    <p class="item">PetnaKanojo</p>
+  </footer>
+</body>
 </html>
