--- a/task0006/web/shouye.html
+++ b/task0006/web/shouye.html
@@ -11,26 +11,29 @@
 <body>
   <head>
     <nav>
-      <p class="title"><a href="../index.html">HI!WELCOME!</a></p>
-      <ul>
+      <div class="logo">
+        <a href="../index.html"><img src="../images/logo.png" alt="logo" width=40px /></a>
+      </div>
+      <ul class="links">
         <li><a class="selected">首页&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-        <li><a href="./web/about.html">关于&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-        <li><a href="./web/archives.html">归档&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-        <li><a href="./web/friendrolls.html">友链&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+        <li><a href="../web/about.html">关于&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+        <li><a href="../web/friendrolls.html">友链&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
       </ul>
     </nav>
   </head>
 　<div>
   <div>
+    <figure>
+
+    </figure>
     <span>CSS:动画</span>
   </div>
 　</div>　
 
   <footer>
-    <p>
-      <span class="certificate">©2017 ❤　PetnaKanojo</span>
-    </p>
-
+    <p class="item">©2017&nbsp;</p>
+    <p class="item">❤&nbsp;</p>
+    <p class="item">PetnaKanojo</p>
   </footer>
 </body>
 </html>
