--- a/task0006/web/friendrolls.html
+++ b/task0006/web/friendrolls.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>PetnaKanojo's blog</title>
   <link rel="stylesheet" href="../css/friendrolls.css">
-  <link rel="icon" href="images/logo.png">
+  <link rel="icon" href="../images/logo.png">
 </head>
 <body>
   <head>
@@ -21,7 +21,18 @@
       </ul>
     </nav>
   </head>
-
+  <div class="content">
+    <ul>
+    <li>
+      <a href="https://www.anotherhome.net/" target="_abc">DIYgod酱</a>
+      <p>一个很有趣的博主，这个博客非常可爱非常可爱！！</p>
+    </li>
+    <li>
+      <a href="https://podiumdesu.github.io" target="_abc">PetnaKanojo</a>
+      <p>我自己的博客，用来记录笔记和日常的生活</p>
+    </li>
+    </ul>
+  </div>
   <footer>
     <p class="item">©2017&nbsp;</p>
     <p class="item">❤&nbsp;</p>
