modified homework2/5,but not finished

--- a/task0007/homework2/5美化网页/web/shouye.html
+++ b/task0007/homework2/5美化网页/web/shouye.html
@@ -17,7 +17,7 @@
       <ul class="links">
         <li><a class="selected">首页&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
         <li><a href="../web/about.html">关于&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-        <li><a href="../web/friendrolls.html">友链&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+        <li><a href="../web/friendrolls.html">友链与demo&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
       </ul>
     </nav>
   </head>
