--- a/task0007/homework2/5美化网页/web/friendrolls.html
+++ b/task0007/homework2/5美化网页/web/friendrolls.html
@@ -11,33 +11,6 @@
 </head>
 <body>
   <script type = "text/javascript" src="../js/friendrolls.js"></script>
-  <script>
-/**  var myname=prompt("请输入你的姓名:");
-  if(myname!=null) {
-    alert("你好"+myname);
-  }
-  else {
-    alert("你好 my friend.");
-  }**/
-
-
-  var x = document.getElementById("field1").value;
-  var y = document.getElementById("field2").value;
-
-  var hammingDistance = function(x,y){
-      var count = 0;
-      var trans = x ^ y ;
-      while ( n> 0 ){
-          if ((n&1)==1){
-              c += 1;
-          }
-          n= n>>1;
-      }
-      alert(count);
-  };
-
-  button.onclick = alert('nihso')
-  </script>
   <head>
     <nav>
       <div class="logo">
@@ -46,7 +19,7 @@
       <ul class="links">
         <li><a href="../web/shouye.html">首页&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
         <li><a href="../web/about.html">关于&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-        <li><a class="selected">友链&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+        <li><a class="selected">友链与demo&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
       </ul>
     </nav>
   </head>
@@ -57,7 +30,7 @@
       <p>一个很有趣的博主，这个博客非常可爱非常可爱！！</p>
     </li>
     <li>
-      <a href="https://podiumdesu.github.io" target="_abc">PetnaKanojo</a>
+      <a href="http://www.petnakanojo.com" target="_abc">PetnaKanojo</a>
       <p>我自己的博客，用来记录笔记和日常的生活</p>
     </li>
     </ul>
@@ -67,16 +40,15 @@
     <ul>
       <li>
         <p>
-          demo1：Compute Hamming Distance:&nbsp;&nbsp;<a href="https://github.com/podiumdesu/js/blob/master/leetcode/461HammingDistance.js" target="_abc">源代码</a>
+          Compute Hamming Distance:&nbsp;&nbsp;<a href="https://github.com/podiumdesu/js/blob/master/leetcode/461HammingDistance.js" target="_abc">源代码</a>
         </p>
         <br />
-        <span>第一个数字：<input type="text" id="field1" placeholder="请输入一个数字" />
-        第二个数字：<input type="text" id="field2" placeholder="请再输入一个数字" /></span>
-        <button class="demo1" >提交</button>
+        <span>第一个数字：<input type="text" id="field1" placeholder="请输入一个整数" />
+        第二个数字：<input type="text" id="field2" placeholder="请再输入一个整数" /></span>
+        <input type="button" id ="button" value="点我('>')"  onclick="displayme()"/>
         <p>
         <span>两个数字间的汉明距离是：</span>
-        <output type = "text" id = "output" >
-        </output>
+        <input type="text" value="" id="output" placeholder="hammingDistance" />
         </p>
       </li>
     </ul>
